[gd_scene load_steps=5 format=3 uid="uid://1rl4k4s8jcr3"]

[ext_resource type="Texture2D" uid="uid://h5mgl24wcfwl" path="res://assets/ui/panel_beige.png" id="1_m24hh"]
[ext_resource type="LabelSettings" uid="uid://br28nggubyiks" path="res://Scenes/lg_48_wh.tres" id="2_7ojce"]
[ext_resource type="Script" path="res://Scenes/LevelButton/level_button.gd" id="2_q0fut"]
[ext_resource type="LabelSettings" uid="uid://pxjs6jgsnahv" path="res://Scenes/lg_24_wh.tres" id="3_ntx2w"]

[node name="LevelButton" type="TextureButton"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(50, 50)
texture_normal = ExtResource("1_m24hh")
script = ExtResource("2_q0fut")

[node name="MC" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MC"]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="MC/VBoxContainer"]
layout_mode = 2
text = "3"
label_settings = ExtResource("2_7ojce")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="MC/VBoxContainer"]
layout_mode = 2
text = "9999"
label_settings = ExtResource("3_ntx2w")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
